# Vehicle-Data-Acquisition-Client

./: .gitignore  CMakeLists.txt  main.cpp  plan.md  readme.md
config/: vehicle.conf
data_collection/: Audio.cpp  Audio.h  CameraThreadManager.cpp  CameraThreadManager.h  DataCollectionTask.cpp  DataCollectionTask.h  DataCollector.cpp  Imu.cpp  Imu.h  PerceptionDeviceManager.cpp  PerceptionDeviceManager.h  main.cpp  radar_sim.cpp
data_process/: DataProcessing.cpp  DataProcessing.h  ProcessingTask.cpp  ProcessingTask.h  main.cpp
file_transfer/: FileSender.cpp  FileSender.h  FileSendingTask.cpp  FileSendingTask.h  NetworkHandler.cpp  NetworkHandler.h  main.cpp  readme
shared/: Config.h  Logger.h  MemoryPool.h  MessageQueue.h  SensorData.h  SharedQueue.cpp  SharedQueue.h  ShmRingBuffer.h  SignalHandler.h  TimeUtil.h  Types.h
supervisor/: ProcessManager.h  main.cpp
